k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-node

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app-node

  template:
    metadata:
      labels:
        app: app-node

    spec:
      containers:
        - name: app-node
          image: adibush/app-node:79c59f36be12842398aa231534a40fee7b54523c
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
