k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-node-service
spec:
  type: NodePort
  selector:
    app: app-node
  ports:
    - port: 80
      targetPort: 3000
